--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -9,10 +9,5 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Message that will be displayed on users'' first issue'
-        pr-message: 'Message that will be displayed on users'' first pr'
-  pr-check:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v2.1.1
+        issue-message: 'Gracias por contribuir con un primer issue!! Es genial ver tu interés en hacer que JConf Mexico sea mejor!'
+        pr-message: 'Ufff! Tu primer PullRequest!! Esto seguro le dará mucha vida a JConf!'
