Quitando el package-lock.json - Causa errores al instalar

--- a/.gitignore
+++ b/.gitignore
@@ -172,6 +172,9 @@ build/Release
 node_modules/
 jspm_packages/
 
+# Added as it can be conflictive
+package-lock.json
+
 # TypeScript v1 declaration files
 typings/
 
