--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -9,5 +9,5 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Gracias por contribuir con un primer issue!! Es genial ver tu interés en hacer que JConf Mexico sea mejor!'
-        pr-message: 'Ufff! Tu primer PullRequest!! Esto seguro le dará mucha vida a JConf!'
+        issue-message: 'Hey thanks for contributing!! I am quite sure @heryxpc will look at these and give opinios!'
+        pr-message: 'Woooow! This is your first PullRequest!! This will make JConf to a new level!! and for sure make @FcoJavierSainz really happy!'
