--- a/.github/workflows/develop-pr.yaml
+++ b/.github/workflows/develop-pr.yaml
@@ -7,34 +7,35 @@ on:
 
 jobs:
   jconf-dev:
+    name: Setup, lint and test developer changes
     runs-on: ubuntu-latest
     env:
       CI: true
     steps:
-      - name: Check out repo
-        uses: actions/checkout@v2
+    - name: Check out repo
+      uses: actions/checkout@v2
 
-      - name: Get dependencies cached
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-            ${{ runner.os }}-
+    - name: Get dependencies cached
+      uses: actions/cache@v2
+      env:
+        cache-name: cache-node-modules
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+          ${{ runner.os }}-
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: 14
+    - name: Set up Node.js
+      uses: actions/setup-node@v1
+      with:
+        node-version: 14
 
-      - name: Install dependencies
-        run: npm install
+    - name: Install dependencies
+      run: npm install
 
-      - name: Run the linter
-        run: npm run lint
+    - name: Run the linter
+      run: npm run lint
 
-      - name: Check unit tests
-        run: npm run test:unit
+    - name: Check unit tests
+      run: npm run test:unit
