--- a/.github/workflows/develop-pr.yaml
+++ b/.github/workflows/develop-pr.yaml
@@ -34,8 +34,8 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Run the linter
+    - name: Lint the project with ESlint and Prettier
       run: npm run lint
 
-    - name: Check unit tests
+    - name: Unit tests with Jest
       run: npm run test:unit
