add translation feature

--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint --no-fix"
+    "lint": "vue-cli-service lint "
   },
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
+    "vue-i18n": "^8.19.0",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0"
   },
