--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "firebase": "^7.17.1",
+    "firebase": "^7.17.2",
+    "firebase-auth": "^0.1.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-i18n": "^8.19.0",
