--- a/.gitignore
+++ b/.gitignore
@@ -201,8 +201,10 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
 .env.test
+.env.**.local
+.env.development
+.env.production
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
