--- a/.github/workflows/develop-pr.yaml
+++ b/.github/workflows/develop-pr.yaml
@@ -11,14 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     env:
       NODE_ENV: development
-      VUE_APP_FIREBASE_API: {{ secrets.STAGING_FIREBASE_API }}
-      VUE_APP_FIREBASE_AUTH_DOMAIN: {{ secrets.STAGING_FIREBASE_AUTH_DOMAIN }}
-      VUE_APP_FIREBASE_DB_URL: {{ secrets.STAGING_FIREBASE_DB_URL }}
-      VUE_APP_FIREBASE_PROJECT: {{ secrets.STAGING_FIREBASE_PROJECT }}
-      VUE_APP_FIREBASE_STORAGE: {{ secrets.STAGING_FIREBASE_STORAGE }}
-      VUE_APP_FIREBASE_MSG_SENDER: {{ secrets.STAGING_FIREBASE_MSG_SENDER }}
-      VUE_APP_FIREBASE_APP: {{ secrets.STAGING_FIREBASE_APP }}
-      VUE_APP_FIREBASE_MEASUREMENT: {{ secrets.STAGING_FIREBASE_MEASUREMENT }}
+      VUE_APP_FIREBASE_API: ${{ secrets.STAGING_FIREBASE_API }}
+      VUE_APP_FIREBASE_AUTH_DOMAIN: ${{ secrets.STAGING_FIREBASE_AUTH_DOMAIN }}
+      VUE_APP_FIREBASE_DB_URL: ${{ secrets.STAGING_FIREBASE_DB_URL }}
+      VUE_APP_FIREBASE_PROJECT: ${{ secrets.STAGING_FIREBASE_PROJECT }}
+      VUE_APP_FIREBASE_STORAGE: ${{ secrets.STAGING_FIREBASE_STORAGE }}
+      VUE_APP_FIREBASE_MSG_SENDER: ${{ secrets.STAGING_FIREBASE_MSG_SENDER }}
+      VUE_APP_FIREBASE_APP: ${{ secrets.STAGING_FIREBASE_APP }}
+      VUE_APP_FIREBASE_MEASUREMENT: ${{ secrets.STAGING_FIREBASE_MEASUREMENT }}
     steps:
     - name: Check out repo
       uses: actions/checkout@v2
