Adding node-sass as dependency

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "geckodriver": "^1.19.1",
     "husky": "^4.2.5",
+    "node-sass": "^4.14.1",
     "prettier": "^1.19.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
