--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "firebase": "^7.17.1",
+    "spectre.css": "^0.5.9",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-i18n": "^8.19.0",
