--- a/.github/workflows/develop-pr.yaml
+++ b/.github/workflows/develop-pr.yaml
@@ -29,7 +29,7 @@ jobs:
         cache-name: cache-node-modules
       with:
         path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package.json') }}
         restore-keys: |
           ${{ runner.os }}-node-
           ${{ runner.os }}-
