--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "spectre.css": "^0.5.9",
     "firebase": "^7.17.2",
     "firebase-auth": "^0.1.2",
+    "node-sass": "^4.14.1",
+    "spectre.css": "^0.5.9",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-i18n": "^8.19.0",
