--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "firebase": "^7.17.2",
+    "firebase": "^7.19.0",
     "firebase-auth": "^0.1.2",
     "node-sass": "^4.14.1",
     "spectre.css": "^0.5.9",
-    "vue": "^2.6.11",
+    "vue": "^2.6.12",
     "vue-class-component": "^7.2.3",
-    "vue-i18n": "^8.19.0",
+    "vue-i18n": "^8.21.0",
     "vue-property-decorator": "^8.4.2",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.4.3"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
@@ -34,16 +34,19 @@
     "@vue/cli-service": "~4.4.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
-    "@vue/test-utils": "^1.0.3",
+    "@vue/test-utils": "^1.0.4",
     "chromedriver": "84",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
-    "geckodriver": "^1.19.1",
+    "geckodriver": "^1.20.0",
+    "jest": "^26.4.2",
     "prettier": "^1.19.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "ts-jest": "^26.2.0",
     "typescript": "~3.9.3",
-    "vue-template-compiler": "^2.6.11"
+    "vue-jest": "^3.0.6",
+    "vue-template-compiler": "^2.6.12"
   }
 }
