--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "vue-cli-service lint --no-fix --max-warnings=0"
   },
   "dependencies": {
+    "@firebase/firestore": "^1.16.4",
     "core-js": "^3.6.5",
     "firebase": "^7.17.2",
     "firebase-auth": "^0.1.2",
