--- a/nginx.conf
+++ b/nginx.conf
@@ -55,7 +55,7 @@ http {
     # Set expires max on static file types
     location ~* ^.+\.(css|js|jpg|jpeg|gif|png|ico|gz|svg|svgz|ttf|otf|woff|eot|mp4|ogg|ogv|webm)$ {
       expires max;
-      root   /sites/example.com/public;
+      root   /app;
       access_log off;
     }
     error_page   500 502 503 504  /50x.html;
