--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint": "^7.7.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "flush-promises": "^1.0.2",
     "geckodriver": "^1.20.0",
     "jest": "^26.4.2",
     "prettier": "^2.1.1",
