--- a/.github/workflows/prod-build.yaml
+++ b/.github/workflows/prod-build.yaml
@@ -71,6 +71,9 @@ jobs:
       - run: |-
           gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
       # Build the Docker image
+      - name: Daaaamn
+        run: echo "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA"
+
       - name: Build
         run: |-
           docker build \
