--- a/.github/workflows/prod-build.yaml
+++ b/.github/workflows/prod-build.yaml
@@ -91,10 +91,7 @@ jobs:
           curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
           chmod u+x ./kustomize
       # Deploy the Docker image to the GKE cluster
-      - name: Deploy
+      - name: Deploy to staging
         run: |-
-          ./kustomize edit set image us.gcr.io/PROJECT_ID/IMAGE:TAG=gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA
-          ./kustomize build . | kubectl apply -f -
-          kubectl rollout status deployment/$DEPLOYMENT_NAME
-          kubectl get services -o wide
+          kubectl create deployment jconfmex-staging --image="us.gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA"
 
